Added camera usage to the Info.plist

--- a/3rd Eye/Info.plist
+++ b/3rd Eye/Info.plist
@@ -38,5 +38,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>The camera will be used for you to look around.</string>
 </dict>
 </plist>
